update create booking request for dancer